--- a/public/depart.html
+++ b/public/depart.html
@@ -4,140 +4,96 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>배송출발 - The Listen</title>
-<script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
 <style>
-:root{--brand:#007bff;--gray:#6b7280;--green:#10b981;--orange:#f59e0b;--red:#ef4444;}
-body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
-header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
-.wrap{max-width:480px;margin:auto;padding:12px}
-.card{background:#fff;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
-.btn{flex:1;display:inline-flex;align-items:center;justify-content:center;gap:6px;
-  border:none;border-radius:10px;padding:12px 10px;font-weight:800;color:#fff;cursor:pointer}
-.btn.orange{background:var(--orange)}
-.btn.green{background:var(--green)}
-.btn.blue{background:var(--brand)}
-.cards{max-height:440px;overflow:auto;border:1px solid #eef2f7;border-radius:10px;padding:8px}
-.citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
-.crow{display:flex;justify-content:space-between;align-items:center;gap:6px}
-.order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;
-  display:flex;align-items:center;justify-content:center;font-weight:900}
-.phone{color:#007bff;text-decoration:none;font-weight:700}
-.high{border:2px solid var(--red);background:#fff0f0}
-.kpi{display:flex;justify-content:space-between;margin-bottom:6px;font-weight:900}
-.footer{display:flex;gap:8px;margin-top:10px}
-.muted{color:#6b7280;font-size:.9rem;text-align:center}
+  :root{--brand:#007bff;--bg:#f7f9fc;--card:#fff;--muted:#6b7280;--border:#e5e7eb}
+  *{box-sizing:border-box}
+  body{margin:0;background:var(--bg);font-family:"Noto Sans KR",sans-serif}
+  header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
+  .wrap{max-width:520px;margin:0 auto;padding:12px}
+  .card{background:#fff;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
+  .btn{border:none;border-radius:10px;padding:12px 14px;font-weight:800;color:#fff;background:var(--brand);cursor:pointer}
+  .btn.full{width:100%} .btn.gray{background:#6b7280} .btn.green{background:#10b981} .btn.orange{background:#f59e0b}
+  .stack{display:flex;gap:8px;flex-wrap:wrap}
+  .list{max-height:440px;overflow:auto;border:1px solid var(--border);border-radius:12px;padding:8px}
+  .item{border:1px solid var(--border);border-radius:12px;padding:10px;margin-bottom:8px}
+  .muted{color:var(--muted)}
+  .row{display:flex;align-items:center;gap:10px}
+  .order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:900}
+  a.tel{color:#007bff;text-decoration:none}
 </style>
 </head>
 <body>
-<header>🚚 배송출발 (The Listen)</header>
-
+<header>🚚 배송출발 (대시보드)</header>
 <div class="wrap">
 
-  <!-- 상단 버튼 3개 대칭 -->
   <div class="card">
-    <div class="footer">
-      <button class="btn orange" id="btnWaybill">📦 운송장 입력</button>
-      <button class="btn green" id="btnOptimize">🧭 최적 경로</button>
-      <button class="btn blue" id="btnDispatch">🚀 출발 전송</button>
+    <div class="stack">
+      <button class="btn orange full" onclick="location.href='waybill.html'">📸 운송장 스캔/입력 (이동)</button>
+      <button class="btn green full" id="btnOptimize">🧭 GPS 최적 경로 정렬</button>
+      <button class="btn full" id="btnDispatch">🚀 출발 전송 → 지도</button>
     </div>
+    <div class="muted" style="margin-top:8px">※ 운송장 스캔/수기는 waybill.html에서만 진행합니다.</div>
   </div>
 
-  <!-- 고객 카드 -->
   <div class="card">
-    <div class="kpi"><span>고객 카드(조남동)</span><span id="custCount">0</span></div>
-    <div id="cards" class="cards"></div>
-    <div class="muted">※ 고가품은 <span style="color:#ef4444;">빨간 테두리</span>로 표시됩니다.</div>
+    <b>고객 목록(스테이징)</b>
+    <div id="list" class="list" style="margin-top:8px"></div>
   </div>
-
 </div>
 
 <script>
-let customers=[];
+const STAGING_KEY = 'stagingDeliveries';    // waybill.html이 여기에 쌓음
+const FINAL_KEY   = 'deliveriesJSON';       // map.html이 읽음
 
-// 🧩 고객 50명 자동 생성 (고가품 10%)
-function seedCustomers(n=50){
-  const arr=[], baseLat=37.3795, baseLng=126.8060;
-  for(let i=1;i<=n;i++){
-    const lat=baseLat+(Math.random()-0.5)*0.01;
-    const lng=baseLng+(Math.random()-0.5)*0.01;
-    const dong=100+(i%20), ho=100+i;
-    const highValue=Math.random()<0.1; // 10% 고가품
-    arr.push({
-      id:`JONAM-${dong}-${ho}`,
-      name:`조남고객${i}`,
-      phone:`010-${String(1000+i).padStart(4,'0')}-${String(2000+i).padStart(4,'0')}`,
-      address:`경기도 시흥시 조남동 ${dong}동 ${ho}호`,
-      boxes:1+(i%3), highValue, lat,lng,order:null
-    });
-  }
-  return arr;
-}
+let customers = [];
+function load(){ try{ customers = JSON.parse(localStorage.getItem(STAGING_KEY)||'[]'); }catch{ customers=[]; } }
+function save(){ localStorage.setItem(STAGING_KEY, JSON.stringify(customers)); }
 
-function renderCards(){
-  document.getElementById('custCount').textContent=customers.length;
-  document.getElementById('cards').innerHTML=customers.map(c=>`
-    <div class="citem ${c.highValue?'high':''}">
-      <div class="crow">
-        <div class="order">${c.order??'-'}</div>
-        <div>
-          <div><b>${c.name}</b> ${c.highValue?'🔴':''}</div>
-          <div>${c.address}</div>
-          <div>📦 ${c.boxes}개 · <a href="tel:${c.phone}" class="phone">📞</a></div>
+function render(){
+  const box = document.getElementById('list');
+  if(!customers.length){ box.innerHTML = '<div class="muted">스테이징된 고객이 없습니다. 먼저 운송장 스캔/입력을 진행하세요.</div>'; return; }
+  box.innerHTML = customers.map((c,i)=>`
+    <div class="item">
+      <div class="row">
+        <div class="order">${c.order ?? i+1}</div>
+        <div style="flex:1">
+          <div><b>${c.name||'-'}</b> · ${c.address||'-'}</div>
+          <div>📞 <a class="tel" href="tel:${c.phone||''}">${c.phone||'-'}</a> · 📦 ${Array.isArray(c.waybills)?c.waybills.length:0}개</div>
+          <div class="muted">운송장: ${(c.waybills||[]).join(', ')||'-'}</div>
         </div>
       </div>
     </div>
   `).join('');
 }
 
-// 🚦 경로 최적화
 function optimize(){
-  if(!navigator.geolocation)return alert('GPS 권한 허용 필요');
+  if(!navigator.geolocation) return alert('GPS 권한을 허용해주세요.');
   navigator.geolocation.getCurrentPosition(pos=>{
-    const [a,b]=[pos.coords.latitude,pos.coords.longitude];
-    const dist=(x1,y1)=>Math.hypot(x1-a,y1-b);
-    customers.sort((x,y)=>dist(x.lat,x.lng)-dist(y.lat,y.lng));
+    const {latitude, longitude} = pos.coords;
+    customers.sort((a,b)=>{
+      const da = Math.hypot((a.lat||0)-latitude, (a.lng||0)-longitude);
+      const db = Math.hypot((b.lat||0)-latitude, (b.lng||0)-longitude);
+      return da - db;
+    });
     customers.forEach((c,i)=>c.order=i+1);
-    localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
-    localStorage.setItem('optimizeByGPS','1');
-    alert('🧭 GPS 기준으로 순번이 설정되었습니다.');
-    voiceGuide();
-    renderCards();
-  });
+    save(); render();
+    alert('🧭 GPS 기준으로 순서가 정렬되었습니다.');
+  }, ()=>alert('GPS 정보를 가져올 수 없습니다.'));
 }
 
-// 🗣️ 순번 음성 안내
-function voiceGuide(){
-  if('speechSynthesis' in window){
-    const msg=new SpeechSynthesisUtterance('배송 순서가 설정되었습니다. 1번 고객부터 시작하세요.');
-    msg.lang='ko-KR';
-    speechSynthesis.speak(msg);
-  }
-}
-
-// 🚀 출발 전송
 function dispatch(){
-  const notSent=customers.filter(c=>!c.sent);
-  const sent=JSON.parse(localStorage.getItem('sentCustomers')||'[]');
-  localStorage.setItem('sentCustomers',JSON.stringify(sent.concat(notSent)));
-  localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
+  if(!customers.length) return alert('보낼 데이터가 없습니다.');
+  localStorage.setItem(FINAL_KEY, JSON.stringify(customers));    // 최종 세트
   localStorage.setItem('startDispatch','1');
-  alert(`🚀 ${notSent.length}건 출발 전송 완료`);
+  localStorage.setItem('optimizeByGPS','1');
+  alert('🚀 출발 전송 완료! 지도 화면으로 이동합니다.');
   location.href='map.html';
-  // depart/waybill 데이터 초기화
-  localStorage.removeItem('scanList');
-  localStorage.removeItem('waybillCustomers');
 }
 
-// 📦 운송장 페이지로 이동
-document.getElementById('btnWaybill').onclick=()=>location.href='waybill.html';
 document.getElementById('btnOptimize').onclick=optimize;
 document.getElementById('btnDispatch').onclick=dispatch;
 
-(function init(){
-  const saved=JSON.parse(localStorage.getItem('waybillCustomers')||'[]');
-  customers=saved.length?saved:seedCustomers(50);
-  renderCards();
-})();
+load(); render();
 </script>
 </body>
 </html>
